--- a/dkms.conf
+++ b/dkms.conf
@@ -1,5 +1,5 @@
 BUILT_MODULE_NAME=hid-apple
-DEST_MODULE_LOCATION='/extra'
+DEST_MODULE_LOCATION='/extramodules'
 PACKAGE_NAME=hid-apple
 PACKAGE_VERSION=1.0
 REMAKE_INITRD=yes
